system security add web security. put this course aside for the time being

--- a/notes/2020-08-13-044944.md
+++ b/notes/2020-08-13-044944.md
@@ -765,12 +765,53 @@ cookies
 
 - cookie security
 
-  - SOP: origin ~ domain (但是也可能domain和origin不一致)
+  - SOP(same origin policy): origin ~ domain (但是也可能domain和origin不一致)
   - send all matching cookies
   - who can set cookie?
   - public suffix (不能设置public suffix的cookie)
     - a.co.uk不能设置.co.uk
-  - 
+  - SOP exceptions:
+    - a.com: ```<a href='https://gmail.com/...'>```, 点击之后是分离的origin，send all cookies也问题不大
+    - a.com: ```<img src='https://foo.com/bar'>```，这是允许的，点击之后也是send all cookies，但是js无法look at来自不同源图片的pixels。但是a.com可以知道图片的尺寸。
+  - cross-site request forgery (CSRF)
+    - GET request: a.com: ```<img src="bank.com/xfer?amt=500&to=attacker">```
+    - Post request: ```<form act='bank.com/xfer'><input type=h v=xxx><submit></form>```
+      - Js侧可以触发submit
+  - 现代浏览器支持same site cookie，这样的cookie只能same site的origin发出请求才会发送
+  - CSRF defenses:
+    - ![image-20200819232220727](2020-08-13-044944.assets/image-20200819232220727.png)
+    - 如果服务器不保存token，而是将token作为一个cookie，然后检查form里的和cookie里的是否匹配，但如果对手能inject cookie，改写cookie，能够绕过这种。
+  - SOP exception: `<script>`
+    - 允许script，来自任何来源
+    - 所以如果有secret别看着像js
+      - 如果有数据只用cookie就能获取，如果对手以js加载，最好能使对手死循环
+  - cross-site scripting (XSS)
+    - 假如对手post一个消息到facebook，里面实际上有一个`<script src=xxx>`，如果facebook不检查内容，直接推送给其他用户，其他用户下载html之后，script开始执行。
+  - XSS defences
+    - no tags in comments
+    - filter tags
+    - http-only cookies (partial)
+    - content-security policy
 
+## Lecture 12: Network Security
 
+## Lecture 13: Security Channels
+
+## Lecture 14: Certificates
+
+## Lecture 15: Guest lecture by Max Burkhardt: Information security in real life
+
+## Lecture 16: Messaging Security
+
+## Lecture 17: Untrusted storage servers
+
+## Lecture 18: CPU timing attacks
+
+## Lecture 19: Tor Q&A with Nick Mathewson
+
+## Lecture 20: MIT network security Q&A with IS&T staff
+
+## Lecture 21: Guest lecture by Max Krohn: Keybase
+
+## Lecture 22: Final Project Presentations
 
