--- a/notes/2020-08-23-034742.md
+++ b/notes/2020-08-23-034742.md
@@ -31,3 +31,40 @@ https://llvm.org/docs/GettingStarted.html
 
 ## Getting Started/Tutorials
 
+- LLVM developer都用Ninja作为build system
+- LLVM currently has a linear-history policy, which means that merge commits are not allowed. The llvm-project repo on github is configured to reject pushes that include merges, so the git rebase step above is required.
+
+- Between runs, CMake preserves the values set for all options. 
+- If you’re running on a Linux system that supports the [binfmt_misc](http://en.wikipedia.org/wiki/binfmt_misc) module, and you have root access on the system, you can set your system up to execute LLVM bitcode files directly.
+
+- Directory Layout
+  - llvm/examples
+    - Simple examples using the LLVM IR and JIT.
+  - llvm/include
+    - public header files exported from LLVM library
+    - /llvm, /llvm/Support, /llvm/Config
+  - llvm/lib
+    - most source codes
+    - IR, AsmParser, Bitcode, Analysis, Transforms, Target, CodeGen, MC, ExecutionEngine, Support
+  - llvm/projects
+  - llvm/test (quick)
+  - test-suite (comprehensive)
+  - llvm-tools
+    - bugpoint, llvm-ar, llvm-as, llvm-dis, llvm-link, lli, llc, opt......
+  - llvm/utils
+
+- LLVM工具链使用例子
+
+  - ```
+    clang hello.c -o hello
+    clang -O3 -emit-llvm hello.c -c -o hello.bc
+    
+    ./hello
+     lli hello.bc
+     
+     llvm-dis < hello.bc | less
+     
+     llc hello.bc -o hello.s
+     gcc hello.s -o hello.native
+     ./hello.native
+    ```
