Add LLVM Pass intro and resources

--- a/notes/2020-08-24-090122.md
+++ b/notes/2020-08-24-090122.md
@@ -72,3 +72,40 @@ https://llvm.org/docs/WritingAnLLVMPass.html
 
 仔细阅读Introduction和QuickStart，略读Pass classes and requirements和Pass statistics。
 
+CMake编译略，
+
+命令行编译是最简单暴力的方法。以Hello Pass为例：
+
+```bash
+$ clang `llvm-config --cxxflags` -Wl,-znodelete -fno-rtti -fPIC -shared Hello.cpp -o LLVMHello.so `llvm-config --ldflags`
+```
+
+其中
+
+- `llvm-config`提供了`CXXFLAGS`与`LDFLAGS`参数方便查找LLVM的头文件与库文件。 如果链接有问题，还可以用`llvm-config --libs`提供动态链接的LLVM库。 具体`llvm-config`打印了什么，请自行尝试或查找官方文档。
+- `-fPIC -shared` 显然是编译动态库的必要参数。
+- 因为LLVM没用到RTTI，所以用`-fno-rtti` 来让我们的Pass与之一致。
+- `-Wl,-znodelete`主要是为了应对LLVM 5.0+中加载ModulePass引起segmentation fault的bug。如果你的Pass继承了ModulePass，还请务必加上。
+
+```bash
+$ clang -c -emit-llvm main.c -o main.bc # 随意写一个C代码并编译到bc格式
+$ opt -load LLVMHello.so -hello main.bc -o /dev/null
+```
+
+### 结合Clang使用Pass
+
+TODO.
+
+### 更难一些的Pass
+
+https://github.com/imdea-software/LLVM_Instrumentation_Pass/blob/master/InstrumentFunctions/Pass.cpp
+
+读者可以再仔细去看看[ProgrammersManual - The Core LLVM Class Hierarchy Reference](https://llvm.org/docs/ProgrammersManual.html#the-core-llvm-class-hierarchy-reference)这一小节，回顾一下LLVM IR在内存中的表示。 也记得看看[Helpful Hints for Common Operations](https://llvm.org/docs/ProgrammersManual.html#helpful-hints-for-common-operations)这一小节，学习一下怎么遍历IR、修改指令。
+
+更有时间可仔细瞧瞧https://llvm.org/docs/ProgrammersManual.html
+
+### 参考项目
+
+https://github.com/google/AFL
+
+fuzzing工具，使用clang和LLVM Pass来把相关代码在编译时插入到待测试程序。
