Add dominator (PL)

--- a/notes/2020-08-21-125052.md
+++ b/notes/2020-08-21-125052.md
@@ -8,3 +8,20 @@ CMU 15-312 Foundations of Programming Languages
 
 - https://www.cs.cmu.edu/~rwh/courses/ppl/phil.html
 
+## Dominator (Graph Theory)
+
+https://en.wikipedia.org/wiki/Dominator_(graph_theory)
+
+![image-20200826143626657](2020-08-21-125052.assets/image-20200826143626657.png)
+
+
+
+![image-20200826143634688](2020-08-21-125052.assets/image-20200826143634688.png)
+
+**Algorithm:**
+
+The dominators of a node n are given by the maximal solution to the following data-flow equations:
+
+![](2020-08-21-125052.assets/f52093a7c43f0638aff90b5c75bb15e81a304047-1598423934140.svg)
+
+![](2020-08-21-125052.assets/eb8277b7461b44bf1f6fa8e544cf6176ec05c5d8-1598423944283.svg)
