keep reading FlashMeta (PROSE)

--- a/notes/2020-08-29-100231.md
+++ b/notes/2020-08-29-100231.md
@@ -65,4 +65,28 @@
   - domain expert can do that, no need for proficiency in program synthesis
 
 - D4 as a Unification of Prior Work
-- 
+
+- Section 4: **Version Space Algebra**
+  - succinctly representing such a huge number of programs in polynomial space
+  - intuitively, VSA can be viewed as **a directed graph where each node represents a set of programs.**
+  - leaf node: direct set of programs
+  - internal (constructor) nodes:
+    - union VSA node: a set-theoretic union
+    - join VSA node: with k children VSAs is annotated with a k-ary DSL operator F, and it represents a
+      cross product of all possible applications of F to k parameter programs, independently chosen from the children VSAs.
+  - Let $N$ be a symbol in a DSL. A version space algebra is a representation for a set $\tilde{N}$ of programs rooted at $N$.
+  - $|\tilde{N}|$ size of $\tilde{N}$: number of programs
+  - $W(\tilde{N})$ width of $\tilde{N}$: maximum number of children in any constructor node of $\tilde{N}$
+  - $V(\tilde{N})$ volume of $\tilde{N}$: number of nodes in $\tilde{N}$
+  - three operations over VSAs: **intersection, ranking, clustering**. related theorems: see paper.
+    - intersection: unification of two sets of candidate programs that are **consistent with two different specifications.**
+      - An efficient algorithm for VSA intersection **follows the ideas of automata intersection.**
+    - ranking: $Top_h(\tilde{N},k)$, $h$ is a ranking function. 
+      - $select$ top $k$ elements in $P_1, P_2, ...P_n$，
+        - $O(m+k \log k)$ Hoare's `quickselect` algorithm，
+        - $O(m\log k)$ using Heap
+    - clustering: Clustering of a VSA partitions it into subsets of programs that are semantically indistinguishable w.r.t. the given input state $\sigma$, i.e. they **give the same output on $\sigma$​.**
+      - for example: filter out the programs in $\tilde{N}$ that are inconsistent with a given specification
+
+
+
