add synthesis papers summary(before 2017)

--- a/notes/2020-08-29-100231.md
+++ b/notes/2020-08-29-100231.md
@@ -88,5 +88,43 @@
     - clustering: Clustering of a VSA partitions it into subsets of programs that are semantically indistinguishable w.r.t. the given input state $\sigma$, i.e. they **give the same output on $\sigma$​.**
       - for example: filter out the programs in $\tilde{N}$ that are inconsistent with a given specification
 
+## Discussion
 
+- Strengths and Limitations
+  - **Decidability**
+    -  A majority of the DSL should be characterized by witness functions, capturing a subset of inverse semantics of the DSL operators.
+    - counterexample: finding roots of a multivariate integral polynomial
+  - **Deduction**
+    - Witness functions should not introduce many disjunctions. Each disjunct (assuming it can be materialized by at least one program) starts a new deduction branch. In certain domains this problem can only be efficiently solved with a corresponding SMT solver.
+    - counterexample: BitOr
+  - **Performance**
+    - Witness functions should be efficient, preferably polynomial in low degrees over the specification size.
+    - counterexample: factoring an integer
 
+- D4 is the only synthesis strategy when **the following (also real-life) conditions hold**:
+  - The DSL contains arbitrary executable operators that manipulate domain-specific objects with rich semantics.
+  - The programs may contain domain-specific constants.
+  - The specifications are inherently ambiguous, and resolving user’s intent requires learning a set of valid programs to enable ranking or additional user interaction.
+  - The engineering & maintenance cost of a PBE-based tool is limited.
+- Remarks: VSA as a language
+
+## Related Work
+
+- Sketch
+  - input: partial program
+  - translate to SAT encoding
+  - applies counterexample-guided inductive synthesis to fill the holes
+- Rosette
+  - DSL-parameterized framework, supports verification, synthesis, repair
+  - input: subset of racket programming language
+  - translate to SMT constraints via symbolic execution
+- Both SKETCH and ROSETTE allow seamless translation of their input languages (custom C-like in SKETCH or limited Racket in ROSETTE) to SAT/SMT encoding at runtime.
+- Syntax-guided synthesis
+  - SyGuS
+    - standardize the input specification language (based on SMT theories) of program synthesis problems;
+    - develop general-purpose synthesis algorithms for these problems, 
+    - standardized benchmark suite.
+  - SyGuS Algorithms: enumerative search, constraint-based search, stochastic search
+- **Deduction for ADT Transformations**
+  - Feser et al. and Osera and Zdancewicoperate: operate over languages with ADT processing operators and limited forms of recursion.
+  - What is ADT Transformations?
