--- a/notes/2020-08-31-120239.md
+++ b/notes/2020-08-31-120239.md
@@ -20,3 +20,29 @@ CVC4 https://cvc4.github.io/
   - model generation abilities
 
 Z3 https://github.com/Z3Prover/z3
+
+Logics Category http://smtlib.cs.uiowa.edu/logics.shtml
+
+![image-20200831140239472](2020-08-31-120239.assets/image-20200831140239472.png)
+
+- The logics have been named using letter groups that evoke the theories used by the logics and some major restriction in their language, with the following conventions:
+  - **QF** for the restriction to quantifier free formulas
+  - **A** or **AX** for the theory [ArraysEx](http://smtlib.cs.uiowa.edu/theories-ArraysEx.shtml)
+  - **BV** for the theory [FixedSizeBitVectors](http://smtlib.cs.uiowa.edu/theories-FixedSizeBitVectors.shtml)
+  - **FP** (forthcoming) for the theory [FloatingPoint](http://smtlib.cs.uiowa.edu/theories-FloatingPoint.shtml)
+  - **IA** for the theory [Ints](http://smtlib.cs.uiowa.edu/theories-Ints.shtml) (Integer Arithmetic)
+  - **RA** for the theory [Reals](http://smtlib.cs.uiowa.edu/theories-Reals.shtml) (Real Arithmetic)
+  - **IRA** for the theory [Reals_Ints](http://smtlib.cs.uiowa.edu/theories-Reals_Ints.shtml) (mixed Integer Real Arithmetic)
+  - **IDL** for Integer Difference Logic
+  - **RDL** for Rational Difference Logic
+  - **L** before **IA**, **RA**, or **IRA** for the linear fragment of those arithmetics
+  - **N** before **IA**, **RA**, or **IRA** for the non-linear fragment of those arithmetics
+  - **UF** for the extension allowing free sort and function symbols
+
+Theories http://smtlib.cs.uiowa.edu/theories.shtml
+
+- SMT-LIB logics refer to one or more theories below
+
+- [Unicode character strings and regular expressions](http://smtlib.cs.uiowa.edu/theories-UnicodeStrings.shtml)
+
+- [Ints](http://smtlib.cs.uiowa.edu/theories-Ints.shtml)
