Add Synthesis papers (before 17)

--- a/notes/2020-09-01-093707.md
+++ b/notes/2020-09-01-093707.md
@@ -108,3 +108,38 @@ presents an algorithm for synthesizing **recursive functions that process algebr
 - Conclusion
   - λsyn combines foundational techniques from proof theory with ideas from modern example-driven program synthesis. prototype, MYTH, show that type-directed program synthesis is a viable approach to synthesis that takes advantage of the rich structure present in typed, functional programming languages.
 
+## 【TACAS17】Scaling Enumerative Program Synthesis via Divide and Conquer
+
+> TACAS / 2017
+
+the Syntax- Guided Synthesis (SyGuS) problem is to find an expression that satisfies
+both the syntactic and semantic constraints: **semantic constraint** specified by a logical formula, a **syntactic constraint** specified by a context-free grammar.
+
+An **enumerative approach** to solve this problem is to **systematically generate all expressions from the syntactic space** with some **pruning**. performs well on small to medium sized benchmarks.
+
+Our approach: a **divide-and-conquer** approach by **separately enumerating** (a) smaller expressions that are **correct on subsets** of inputs, and (b) predicates that **distinguish these subsets**. expressions and predicates are then combined using decision trees (multi-label decision tree learning problem). We propose a novel technique of associating a probability distribution over the set of labels that a sample can be labeled with. use standard **information-gain based heuristics** to learn compact decision trees.
+
+prototype implementation **eusolver**, placed first in the general track and the programming-by-examples track (2016).
+
+总结:
+
+- Most synthesis algorithms proposed in recent literature can be viewed as an instantiation of CEGIS (counterexample guided inductive synthesis).
+- Synthesis of recursive programs and data structure manipulating code has also been studied extensively
+  - Recursive Program Synthesis (CAV 2013)
+  - Synthesis Modulo Recursive Functions (OOPSLA 2013)
+  - Comfusy: A Tool for Complete Functional Synthesis (CAV 2010)
+- SyGuS first: Enumerative Search, Stochastic Search, Symbolic Search
+- 本文：The algorithm overcomes the shortcomings of a basic enumerative algorithm by using enumeration to only learn small expressions which are correct on subsets of the inputs. These expressions are then used to form a conditional expression using Boolean combinations of enumerated predicates using decision trees.
+
+## 【ICLR17】Neuro-Symbolic Program Synthesis
+
+Recent years have seen the proposal of a number of neural architectures for the problem of Program Induction. Given a set of input-output examples, these architectures are able to learn mappings that generalize to new test inputs. But: **computationally expensive and hard to train**, **a model has**
+**to be trained for each task**, **hard to interpret or verify the correctness of the learnt mapping**.
+
+In this paper, we propose **Neuro-Symbolic Program Synthesis**. Based on two novel neural modules. The first module, called the **cross correlation I/O network**, given a set of input-output examples, produces a continuous representation of the set of I/O examples. The second module, the **Recursive-**
+**Reverse-Recursive Neural Network (R3NN)**, given the continuous representation of the examples, synthesizes a program by incrementally expanding partial programs.
+
+Demonstrate the effectiveness of our approach by applying it to the rich and complex domain of regular expression based string transformations.
+
+we took a **supervised-learning approach** here, assuming availability of target programs during training.
+In some scenarios, we may only have **access to an oracle** that returns the desired output given an input. In this case, **reinforcement learning** is a promising framework for program synthesis.
