Add synthesis paper (2018)

--- a/notes/2020-09-01-093707.md
+++ b/notes/2020-09-01-093707.md
@@ -133,6 +133,8 @@ prototype implementation **eusolver**, placed first in the general track and the
 
 ## 【ICLR17】Neuro-Symbolic Program Synthesis
 
+> ICLR / 2017
+
 Recent years have seen the proposal of a number of neural architectures for the problem of Program Induction. Given a set of input-output examples, these architectures are able to learn mappings that generalize to new test inputs. But: **computationally expensive and hard to train**, **a model has**
 **to be trained for each task**, **hard to interpret or verify the correctness of the learnt mapping**.
 
@@ -143,3 +145,54 @@ Demonstrate the effectiveness of our approach by applying it to the rich and com
 
 we took a **supervised-learning approach** here, assuming availability of target programs during training.
 In some scenarios, we may only have **access to an oracle** that returns the desired output given an input. In this case, **reinforcement learning** is a promising framework for program synthesis.
+
+## 【CommACM18】Search based program synthesis
+
+>Communications of ACM / 2018 / review articles
+
+- Syntax-guided synthesis formalizes the computational problem of searching for a program expression that meets both syntactic and logical constraints.
+- A wide variety of problems, such as programming by examples, program super-optimization, and program repair, naturally map to syntax-guided synthesis. 
+- Standardization, benchmark collection, and solver competition have led to significant advances in solution strategies and new applications.
+  - The formalization of the SyGuS problem and organization of the annual competition of solvers has been a catalyst for research in search-based program synthesis.
+- The categories of benchmarks in which state-of-the-art solvers excel are those with a single function
+  invocation, a single function to synthesize, a complete specification, no use of let, and a restricted grammar.
+
+- Programming by examples in **domain specific applications** and **semantics preserving optimization** are already proving to be its interesting applications. Our experience shows that investing in the infrastructure— standardized input formats, collection of benchmarks, opensource prototype solvers, and a competition of solvers—has been vital in advancing the state of the of art. Finally, **improving the scalability of SyGuS solvers is an active area** of current research, and in particular, a promising research direction is to explore **how these solvers can benefit from modern machine learning technology** (see, for example, Devlin et al. for the use of neural networks for learning programs from IO examples).
+
+## 【ICLR18】Towards Synthesizing Complex Programs From Input-Output Examples
+> ICLR / 2018
+
+proposing a new class of challenging tasks in the domain of program synthesis from IO examples: **learning a context-free parser** from **pairs of input programs and their parse trees**. three novel techniques: 
+
+- the use of **a non-differentiable machine** is the key to effectively restrict the search space. learns a neural program operating a domain-specific non-differentiable machine.
+- **recursion** is the key to achieve generalizability.  bake-in the notion of recursion in the design of our non-differentiable machine.
+- **reinforcement learning** is the key to learn **how to operate** the non-differentiable machine.
+
+hard to train the model effectively from a cold boot. We develop a novel two-phase reinforcement learning-based search algorithm to overcome this issue. Neural parsing programs can be learned to achieve 100% test accuracy on test inputs that are 500x longer than the training samples.
+
+## 【PLDI18】Program Synthesis Using Conflict-Driven Learning
+
+> PLDI / 2018
+
+We propose a new **conflict-driven** program synthesis technique that is capable of **learning from past mistakes**.  our synthesis algorithm identifies the root cause of the conflict (with specification) and learns new lemmas that can prevent similar mistakes in the future. we introduce the notion of **equivalence modulo conflict**. We have implemented a general purpose CDCL-style program synthesizer called Neo and evaluate it in two different application domains, namely data wrangling in R and **functional programming over lists**. Neo outperforms two state-of-the-art synthesis tools, Morpheus and DeepCoder, that target these respective domains.
+
+Our synthesis algorithm infers these lemmas by identifying DSL constructs that are equivalent modulo conflict, meaning that **replacing one component with the other results in an another infeasible program**.
+
+## 【POPL18】Program Synthesis Using Abstraction Refinement
+
+> POPL / 2018
+>
+> Program Synthesis, Abstract Interpretation, Counterexample Guided Abstraction Refinement, Tree Automata
+
+We present a new approach to example-guided program synthesis based on **counterexample-guided abstraction refinement**. Our method uses the abstract semantics of the underlying DSL to find a program P whose abstract behavior satisfies the examples. However, since program P may be **spurious with respect to the concrete semantics**, our approach **iteratively refines the abstraction** until we either find a program that satisfies the examples or prove that no such DSL program exists. many programs have the same input-output behavior in terms of their abstract semantics, this synthesis methodology **significantly reduces the search space compared to existing techniques that use purely concrete semantics**.
+
+we propose a refinement-based synthesis algorithm that uses **abstract finite tree automata (AFTA).** We implement these ideas in a framework called Blaze, which can be instantiated in different domains **by providing a suitable DSL and its corresponding concrete and abstract semantics**. We have used the Blaze framework to build **synthesizers for string and matrix transformations**.
+
+Our results for the **string** domain show that **Blaze compares favorably with FlashFill**, In the context of **matrix manipulations**, we compare **Blaze against Prose**, a state-of-the-art general-purpose VSA-based synthesizer, and show that Blaze
+results in a **90x speed-up over Prose**.
+
+Limitations:
+
+- does not support let bindings
+- treats λ-abstractions as constants; hence, it may not perform very well for DSLs that encourage heavy use of higher-order combinators.
+- requires abstract values to be drawn from a decidable logic
