add synthesis papers (2020)

--- a/notes/2020-09-01-093707.md
+++ b/notes/2020-09-01-093707.md
@@ -196,3 +196,64 @@ Limitations:
 - does not support let bindings
 - treats λ-abstractions as constants; hence, it may not perform very well for DSLs that encourage heavy use of higher-order combinators.
 - requires abstract values to be drawn from a decidable logic
+
+## 【PLDI20】Exact and Approximate Methods for Proving Unrealizability of Syntax-Guided Synthesis Problems
+
+> PLDI / 2020 
+
+We consider the problem of automatically establishing that **a given syntax-guided-synthesis (SyGuS) problem is unrealizable** (i.e., has no solution).
+
+We then present an algorithm for exactly solving the set of equations that result from SyGuS problems over linear integer arithmetic (**LIA**) and LIA with conditionals (**CLIA**), thereby showing that LIA and CLIA SyGuS problems over finitely many examples are decidable.
+
+We implement the proposed technique and algorithms in a tool called nay. nay can prove unrealizability for 70/132 existing SyGuS benchmarks, with running times comparable to those of the state-of-the-art tool nope.
+
+相关工作比较：
+
+- nope, the tool we compare against (can prove unrealizability for non-trivial SyGuS problems), reduces the problem of proving unrealizability to one of **proving unreachability in a recursive nondeterministic program**, and uses off-the-shelf verifiers to solve the unreachability problem. 
+- In contrast, the approach presented in this paper gives a characterization of unrealizability in terms of solving a set of equations. Using the **equation-solving framework**, we provided the **first decision procedures for LIA and CLIA** SyGuS problems over examples.
+
+## 【PLDI20】Question Selection for Interactive Program Synthesis
+
+> PLDI / 2020
+
+Selecting the proper question to minimize the rounds of interactions is critical to the performance of interactive program synthesis. We address this question selection problem and propose two algorithms. 
+
+- SampleSy **approximates a state-of-the-art strategy proposed for optimal decision tree** and has a short response time to enable interaction. 
+- EpsSy further reduces the rounds of interactions by **approximating SampleSy with a bounded error rate**. 
+- To implement the two algorithms, we further propose VSampler, an approach to **sampling programs from a probabilistic context-free grammar based on version space algebra**. The evaluation shows the effectiveness of both algorithms.
+
+结论：
+
+**Staring from the minimax branch strategy**, we design two efficient algorithms SampleSy and EpsSy for two different scenarios: **SampleSy ensures the result to be correct while EpsSy has a bounded error rate.**
+
+## 【PLDI20】Reconciling Enumerative and Deductive Program Synthesis
+
+> PLDI / 2020
+
+enumerative synthesis, deductive synthesis: Neither approach is strictly better than the other: **automated deductive synthesis is usually very efficient but only works for special grammars or applications**; **enumerative synthesis is very generally applicable but limited in scalability.**
+
+We propose a **cooperative synthesis technique** for SyGuS problems CLIA background theory, combining the best of the two worlds. The technique exploits several novel **divide-and-conquer strategies to split** a large synthesis problem to smaller subproblems (solved separately). The technique integrates two synthesis engines: a **pure deductive component** that can efficiently solve some problems, and **a height-based enumeration algorithm** that can handle arbitrary grammar.
+
+Contributions:
+
+- a cooperative synthesis framework that splits a synthesis problem into subproblems which are solved by deduction or enumeration separately
+
+- three novel divide-and-conquer strategies which allows splitting a wide variety of sophisticated synthesis problems
+
+- a height-based enumeration algorithm that splits the search space based on the height of the tree representation of the program and searches for each height symbolically;
+
+- a set of general deductive rules that are powerful enough to solve/simplify many synthesis problems
+
+- the cooperative synthesis technique has been embodied in a SyGuS solver called DryadSynth.
+
+## 【POPL20】Augmented Example-Based Synthesis using Relational Perturbation Properties
+
+> POPL / 2020
+
+Example-based specifications for program synthesis, ambiguous problem. Existing synthesis techniques attempt to address this problem by either **placing a domain-specific syntactic bias** on the hypothesis space or heavily **relying on user feedback** to help resolve ambiguity.
+
+We present a new framework to address the ambiguity/generalizability problem in example-based synthesis. **Permutation invariance:** the program output does not change when the elements of the program input (array) are permuted.
+
+based on two core steps: (1) automatically **augment the set of user-provided examples by applying relational perturbation properties** and (2) use a generic example-based synthesizer to **generate a program consistent with the augmented set of examples**. (in video, talk about hard / soft constraint)
+
+We presented solutions for three user interfaces and demonstrated the effectiveness of our approach in significantly boosting the performance of the **Sketch** synthesizer.
