--- a/notes/2020-09-13-043652.md
+++ b/notes/2020-09-13-043652.md
@@ -26,6 +26,22 @@ The Illustrated Transformer
 
 http://jalammar.github.io/illustrated-transformer/
 
+BERT Explained - A list of frequent asked questions
+
+https://yashuseth.blog/2019/06/12/bert-explained-faqs-understand-bert-working/
+
+[Quora] Are transformers (BERT, etc.) one kind of embedding (word vectors)?
+
+https://www.quora.com/Are-transformers-BERT-etc-one-kind-of-embedding-word-vectors
+
+[Wikipedia] Transformer
+
+https://en.wikipedia.org/wiki/Transformer_(machine_learning_model)
+
+Transformer Neural Network Architecture (a summary)
+
+https://devopedia.org/transformer-neural-network-architecture
+
 ## Attention is All you need
 
 ## BERT Explained!
@@ -141,3 +157,7 @@ https://www.youtube.com/watch?v=UYPa347-DdE
 ![image-20200915020208976](2020-09-13-043652.assets/image-20200915020208976.png)
 
 ![image-20200915020753761](2020-09-13-043652.assets/image-20200915020753761.png)
+
+![image-20200915022030451](2020-09-13-043652.assets/image-20200915022030451.png)
+
+![image-20200915022337153](2020-09-13-043652.assets/image-20200915022337153.png)
