add CS6231, CS5223

--- a/notes/2020-09-13-043652.md
+++ b/notes/2020-09-13-043652.md
@@ -161,3 +161,6 @@ https://www.youtube.com/watch?v=UYPa347-DdE
 ![image-20200915022030451](2020-09-13-043652.assets/image-20200915022030451.png)
 
 ![image-20200915022337153](2020-09-13-043652.assets/image-20200915022337153.png)
+
+## Text Preprocessing | Sentiment Analysis with BERT using huggingface, PyTorch and Python Tutorial
+
