--- a/notes/2020-09-14-104113.md
+++ b/notes/2020-09-14-104113.md
@@ -2,5 +2,32 @@
 
 > Deep Learning
 
-- 45 Questions to test a data scientist on basics of Deep Learning (along with solution)
-  - https://www.analyticsvidhya.com/blog/2017/01/must-know-questions-deep-learning/
+## 45 Questions to test a data scientist on basics of Deep Learning (along with solution)
+
+- https://www.analyticsvidhya.com/blog/2017/01/must-know-questions-deep-learning/
+
+## Gradient Descent, Step by Step
+
+- https://www.youtube.com/watch?v=sDv4f4s2SB8
+- ![image-20200917103621728](2020-09-14-104113.assets/image-20200917103621728.png)
+- 计算intercept的微分时，带入别的值，得到f(intercept)
+
+![image-20200917103720264](2020-09-14-104113.assets/image-20200917103720264.png)
+
+![image-20200917103821510](2020-09-14-104113.assets/image-20200917103821510.png)
+
+​			0.1是learning rate
+
+![image-20200917104310055](2020-09-14-104113.assets/image-20200917104310055.png)
+
+![image-20200917104332875](2020-09-14-104113.assets/image-20200917104332875.png)
+
+![image-20200917104416338](2020-09-14-104113.assets/image-20200917104416338.png)
+
+![image-20200917104554545](2020-09-14-104113.assets/image-20200917104554545.png)
+
+![image-20200917104626723](2020-09-14-104113.assets/image-20200917104626723.png)
+
+![image-20200917105855299](2020-09-14-104113.assets/image-20200917105855299.png)
+
+![image-20200917110012188](2020-09-14-104113.assets/image-20200917110012188.png)
