add Deep Learning

--- a/notes/2020-08-19-081845.md
+++ b/notes/2020-08-19-081845.md
@@ -4,3 +4,6 @@
 
 - WSL2如何归还磁盘空间
   - https://github.com/microsoft/WSL/issues/4699
+
+- WSL2 Ubuntu GUI
+  - https://www.youtube.com/watch?v=IL7Jd9rjgrM
