--- a/notes/2020-09-14-104113.md
+++ b/notes/2020-09-14-104113.md
@@ -2,6 +2,52 @@
 
 > Deep Learning
 
+## Model Selection and Train/Validation/Test set
+
+https://www.youtube.com/watch?v=MyBSkmUeIEs
+
+## Backpropagation
+
+- What is backpropagation really doing? (3Blue1Brown)
+
+  https://www.youtube.com/watch?v=Ilg3gGewQ5U&list=PLZHQObOWTQDNU6R1_67000Dx_ZCJB-3pi&index=3
+
+- calculus (3Blue1Brown)
+
+  https://www.youtube.com/watch?v=tIeHLnjs5U8
+
+## Dropout
+
+- Understanding Dropout Deeplearning.ai
+
+  https://www.youtube.com/watch?v=ARq74QuavAo
+
+Dropout is a regulation technique, but will cause the loss no longer well defined.
+
+Suggestion: turn off dropout to see if loss decreasing, and add dropout back.
+
+## Cross-Entropy = Entropy + KL Divergence
+
+https://www.youtube.com/watch?v=ErfnhcEV1O8
+
+![image-20201003012902669](2020-09-14-104113.assets/image-20201003012902669.png)
+
+![image-20201003013107840](2020-09-14-104113.assets/image-20201003013107840.png)
+
+![image-20201003013250692](2020-09-14-104113.assets/image-20201003013250692.png)
+
+**Why do we need cross entropy loss? (Visualized)**
+
+https://www.youtube.com/watch?v=gIx974WtVb4
+
+##  Softmax Regression (for multi-class)
+
+https://www.youtube.com/watch?v=LLux1SW--oM
+
+![image-20201002192914173](2020-09-14-104113.assets/image-20201002192914173.png)
+
+
+
 ## 45 Questions to test a data scientist on basics of Deep Learning (along with solution)
 
 - https://www.analyticsvidhya.com/blog/2017/01/must-know-questions-deep-learning/
