--- a/notes/2020-08-21-125052.md
+++ b/notes/2020-08-21-125052.md
@@ -8,6 +8,14 @@ CMU 15-312 Foundations of Programming Languages
 
 - https://www.cs.cmu.edu/~rwh/courses/ppl/phil.html
 
+## Turing Machine and Turing Complete
+
+Turing Machine https://www.youtube.com/watch?v=dNRDvLACg5Q
+
+Turing Complete https://www.youtube.com/watch?v=RPQD7-AOjMI
+
+Chomsky hierarchy https://www.youtube.com/watch?v=224plb3bCog
+
 ## Dominator (Graph Theory)
 
 https://en.wikipedia.org/wiki/Dominator_(graph_theory)
