--- a/notes/2020-08-20-121319.md
+++ b/notes/2020-08-20-121319.md
@@ -32,3 +32,15 @@ https://www.youtube.com/watch?v=R0aURMOmY3g&list=PLMPy362FkW9op455V_mIBVZk7JV8tr
 SYNT 2020: Synthesis in Uclid5
 
 https://www.youtube.com/watch?v=UK2Z8xnq8r8&list=PLMPy362FkW9op455V_mIBVZk7JV8trWG1&index=3
+
+
+
+a good talk by James Koppel http://www.jameskoppel.com/ 
+
+he's in group http://groups.csail.mit.edu/cap/
+
+**You are a Program Synthesizer" by James Koppel,** 
+
+https://www.youtube.com/watch?v=ldkF-4WNZqA&t=1347s
+
+![image-20201006141324732](2020-08-20-121319.assets/image-20201006141324732.png)
